Fixed layout issues on the book page

--- a/src/Views/SchedulePage/SchedulePage.scss
+++ b/src/Views/SchedulePage/SchedulePage.scss
@@ -17,9 +17,6 @@
     width: 100%;
     margin: 16rem 0;
 
-    @media (max-width: 599px) {
-      margin: 64px 0;
-    }
     @media (min-width: 600px) and (max-width: 999px) {
       margin: 88px 0;
     }
